priv/static/css/main.css
.alert {
  overflow: auto; /* block formatting context */
}

.kalendae a:hover {
  text-decoration: none;
}

label input[type="checkbox"],
label input[type="radio"] {
  display: inline;
  margin-right: 0.5em;
}

@font-face {
	font-family: kreide;
	src: url('/kiezkantine/static/font/EraserRegular.ttf');
	font-style: normal;
	font-weight: normal;
}

h2 {color: #FFFFFF;}

.white {color: #FFFFFF;}

body {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    background-image: url("/kiezkantine/static/images/slate.jpg");
}

.container-fluid-cook{
  @extend .container-fluid;
    margin-top: 50px;
}

/* Tafel section
-------------------------------------------------- */

.board {
  text-align: center;
  color: #FFFFFF;
}

.board h1 {
  margin: 60px 0 10px;
  letter-spacing: -1px;
  font-family: Kreide; color: #FFFFFF
}

.board h2 {
	margin: 60px 0 10px;
	letter-spacing: -1px;
	font-family: Kreide; color: #FFFFFF
}

@media (min-width: 768px) {
	.board h1 {
		font-size: 80px;
  		font-weight: 200;
  		line-height: 1;
	}
	.board h2 {
		font-size: 50px;
		font-weight: 200;
		line-height: 1;
	}
	.board h3 {
		font-size: 40px;
		font-weight: 200;
		line-height: 1;
	}
	.board h4 {
		font-size: 30px;
		font-weight: 200;
		line-height: 1;
	}
	.board h5 {
		font-size: 16px;
		font-weight: 200;
		line-height: 1;
	}
	.board h9 {
		font-size: 12px;
		font-weight: 200;
		line-height: 1;
	}

}

@media (max-width: 990px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}
.board h3 {
	margin: 60px 0 10px;
	letter-spacing: -1px;
  	font-family: Kreide; color: #FFFFFF
}

.board h4 {
	margin: 60px 0 10px;
	letter-spacing: -1px;
  	font-family: Kreide; color: #FF0000
}

.board h5 {
	letter-spacing: -1px;
  	font-family: Kreide; color: #FFFFFF
}

.board h9 {
	letter-spacing: -1px;
  	font-family: Kreide; color: #FFFFFF
}



.board p {
  font-size: 16px;
  line-height: 1.5;
}
.board .board-byline {
  margin-bottom: 40px;
  font-size: 20px;
  font-weight: 300;
  line-height: 25px;
  color: #999;
}
.board img {
  display: block;
  margin: 0 auto 30px;
}

